--- a/index.html
+++ b/index.html
@@ -27,24 +27,44 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <script src="src/index.js" async defer></script>
+    <script src="index.js" async defer></script>
     <title>
       Frontend Mentor | Coding Bootcamp Testimonials Slider
     </title>
   </head>
   <body>
     <main class="main">
-      <section class="card card-1">
-        <blockquote>
-          “ I’ve been interested in coding for a while but never
-          taken the jump, until now. I couldn’t recommend this
-          course enough. I’m now in the job of my dreams and so
-          excited about the future. ”
-        </blockquote>
-        <p>Tanya Sinclair</p>
-        <p>UX Engineer</p>
+      <section class="card">
+        <div class="card__picture">
+          <img
+            src="images/image-tanya.jpg"
+            alt="image-tanya.jpg"
+            class="card__img"
+          />
+          <div class="card__buttons">
+            <button
+              type="button"
+              class="btn btn__prev btn__next"
+            >
+              <i class="btn__arrow-left"></i>
+            </button>
+            <button type="button" class="btn btn__next">
+              <i class="btn__arrow-right"></i>
+            </button>
+          </div>
+        </div>
+        <div class="card__text">
+          <blockquote class="card__cite">
+            “ I’ve been interested in coding for a while but
+            never taken the jump, until now. I couldn’t recommend
+            this course enough. I’m now in the job of my dreams
+            and so excited about the future. ”
+          </blockquote>
+          <p class="card__name">Tanya Sinclair</p>
+          <p class="card__profession">UX Engineer</p>
+        </div>
       </section>
-      <section class="card card-2">
+      <!-- <section class="card card-2">
         <blockquote>
           “ If you want to lay the best foundation possible I’d
           recommend taking this course. The depth the instructors
@@ -53,7 +73,7 @@
         </blockquote>
         <p>John Tarkpor</p>
         <p>Junior Front-end Developer</p>
-      </section>
+      </section> -->
     </main>
 
     <!-- 
