--- a/index.html
+++ b/index.html
@@ -35,22 +35,21 @@
   <body>
     <main class="main">
       <section class="card">
-        <div class="card__picture">
-          <img
-            src="images/image-tanya.jpg"
-            alt="image-tanya.jpg"
-            class="card__img"
-          />
-          <div class="card__buttons">
-            <button
-              type="button"
-              class="btn btn__prev btn__next"
-            >
-              <i class="btn__arrow-left"></i>
-            </button>
-            <button type="button" class="btn btn__next">
-              <i class="btn__arrow-right"></i>
-            </button>
+        <div class="card__top">
+          <div class="card__picture">
+            <img
+              src="images/image-tanya.jpg"
+              alt="image-tanya.jpg"
+              class="card__img"
+            />
+            <div class="card__buttons">
+              <button type="button" class="btn btn__prev">
+                <i class="btn__arrow-left"></i>
+              </button>
+              <button type="button" class="btn btn__next">
+                <i class="btn__arrow-right"></i>
+              </button>
+            </div>
           </div>
         </div>
         <div class="card__text">
